deps + code: upgrade 3rd-party deps to latest JDK21 + code logic optimization
DEPENDENCY UPGRADES (pom.xml, verified BUILD SUCCESS):
- commons-logging 1.2 -> 1.3.6
- jackson 2.17.2 -> 2.18.4
- rythm 1.3.0 -> 1.4.2
- maven-antrun-plugin 1.8 -> 3.2.0
- maven-assembly-plugin 3.1.1 -> 3.8.0
- maven-dependency-plugin 3.8.1 -> 3.11.0
- maven-javadoc-plugin 3.11.2 -> 3.12.0
- maven-surefire-plugin 3.5.2 -> 3.5.6

REMOVED dead deps/properties:
- jaxb-namespaceprefixmapper.version + JAXBNamespacePrefixMapper
  dependencyManagement entry: replaced by docx4j-JAXB-ReferenceImpl;
  no source file imports it.
- maven-nexus-yuicompressor-plugin.version: not referenced.
- maven-war-plugin.version: project packaging is 'jar', no war
  plugin consumer.

REVERTED from agent attempt (with reason):
- ognl 3.3.4 -> 3.4.7: breaking API change in ognl 3.4 — MemberAccess
  interface signature now uses OgnlContext instead of Map. Requires
  DefaultMemberAccess.java rewrite. Keep 3.3.4 (still JDK-21 compatible).
- eclipselink 2.7.6 -> 4.0.8: 4.x is jakarta-only; 2.7.x works with docx4j
  ReferenceImpl. (Actually MOXy is non-functional on JDK21 anyway.)

CODE LOGIC OPTIMIZATION (no behavior change):
- WmlTableUtils: StringBuffer -> StringBuilder in 3 hot paths
  (createHyperlink, getTblContentList, createTable); fix string concat
  in loop to avoid intermediate String objects.
- WmlZipUtils: Enumeration -> modern for-each via Collections.list.
- WmlParagraphUtils: IOUtils.toByteArray (stream leak) ->
  Files.readAllBytes(Path.of(filePath)).
- ZipFolderHelper: manual FileInputStream + finally -> try-with-resources
  Files.newInputStream.
- WordprocessingMLJspTemplate: FileUtils.readFileToString ->
  Files.readString; IOUtils.toString -> InputStream.readAllBytes().
- WordprocessingMLHtmlTemplate + AbstractStringTemplateWrappingTemplate:
  same IOUtils/FileUtils -> modern Files / InputStream migration.

VALIDATION: mvn clean verify BUILD SUCCESS
- 1115 tests, 0 failures, 0 errors, 8 skipped (env-