@@ -21,7 +21,7 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
-import org.apache.commons.io.FileUtils;
+import java.nio.file.Files;
 import org.apache.commons.io.IOUtils;
 import org.docx4j.model.structure.PageSizePaper;
 import org.docx4j.openpackaging.packages.WordprocessingMLPackage;
@@ -107,12 +107,12 @@ public class WordprocessingMLHtmlTemplate implements WordprocessingMLTemplate {
 
 	@Override
 	public WordprocessingMLPackage process(File template, Map<String, Object> variables) throws Exception {
-		return this.process(FileUtils.readFileToString(template, StandardCharsets.UTF_8), variables);
+		return this.process(Files.readString(template.toPath()), variables);
 	}
-	
+
 	@Override
 	public WordprocessingMLPackage process(InputStream template, Map<String, Object> variables) throws Exception {
-		return this.process(IOUtils.toString(template, StandardCharsets.UTF_8), variables);
+		return this.process(new String(template.readAllBytes(), StandardCharsets.UTF_8), variables);
 	}
 	
 	/**
